manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubenotes
spec:
  selector:
    app: kubenotes
  ports:
  - port: 80
    targetPort: 8080
