manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubenotes-ingress
spec:
  rules:
  - host: kubenotes.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubenotes
            port:
              number: 80
